samples/_failures_safe/1761798262_c4284c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_fed9ed9e.c: In function ‘parse_expression’:
./samples/SAFE/__tmp_fed9ed9e.c:162:26: error: expected ‘)’ at end of input
  162 |             if (right < 0
      |                ~         ^
      |                          )
./samples/SAFE/__tmp_fed9ed9e.c:162:13: error: expected declaration or statement at end of input
  162 |             if (right < 0
      |             ^~
./samples/SAFE/__tmp_fed9ed9e.c:162:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_fed9ed9e.c:162:13: error: expected declaration or statement at end of input
